# charade-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  start.sh
docker/: docker-compose.yml  start-dev.sh
migrations/2023-08-20-094846_create_base_tables/: down.sql  up.sql
migrations/2023-08-22-063201_add-words-table/: up.sql
migrations/2023-08-29-152752_add_session_id_not_empty_constraint/: down.sql  up.sql
migrations/2023-08-29-171109_add_admin_user_to_session/: down.sql  up.sql
migrations/2023-08-29-171349_add_cascade_rules/: down.sql  up.sql
src/: api_configs.rs  configs.rs  main.rs  schema.rs
src/extractors/: user_id.rs
src/middlewares/: anonymous_auth.rs  mod.rs  session.rs
src/models/: custom_api_errors.rs  db_models.rs  mod.rs  session.rs  user.rs  users_sessions.rs  word.rs
src/models/dtos/: mod.rs  session.rs  user.rs  word.rs
src/repositories/: cache.rs  database.rs
src/repositories/database/: sessions.rs  users.rs  words.rs
src/routes/: auth.rs  mod.rs  routes.rs  sessions.rs  ws.rs
src/utils/: db.rs  envs.rs  mod.rs  validators.rs
src/websocket/: messages.rs  mod.rs  server.rs  session.rs
src/websocket/server/: handlers.rs  utils.rs
