[package]
name = "charade-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15"
chrono = {version = "0.4.26", features = ["serde"]}
uuid = {version = "1.4.1", features = ["serde", "v4"]}
lazy_static = "1.4.0"
diesel_migrations = "2.1.0"
env_logger = "0.10.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
futures-util = "0.3.28"
log = "0.4.20"
