[package]
name = "charade-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = [
    "postgres",
    "chrono",
    "uuid",
    "r2d2",
] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
lazy_static = "1.4.0"
env_logger = "0.10.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
futures-util = "0.3.28"
log = "0.4.20"
actix-web-actors = "4.2.0"
actix = "0.13.0"
rand = "0.8.5"
serde_json = "1.0.105"
redis = { version = "0.23.2", features = ["tokio-comp"] }
async-trait = "0.1.73"
actix-cors = "0.6.4"
derive_more = "0.99.17"
thiserror = "1.0.47"
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive"] }
regex = "1.9.5"
